--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <header>
   <div class="logo-wrapper">
     <!-- LOGO MEMBRESÍA (reemplazar archivo) -->
-    <img src="logo-latinas-biz-mindset.png" alt="Latinas Biz MindSet Membresía">
+    <img src=<img src="assets/img/logo-latinas-biz-mindset.png" alt="Latinas Biz MindSet">
   </div>
 
   <h1>Clases gratuitas para fortalecer tu mentalidad y tu negocio</h1>
