--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <div class="hero-actions">
     <a href="#registro" class="btn btn-primary">Reservar mi lugar gratis</a>
     <!-- URL COMPRA MEMBRESÍA (reemplazar) -->
-    <a href="https://TU-URL-DE-COMPRA-AQUI.com" class="btn btn-secondary">Comprar membresía</a>
+    <a href="https://shop.beacons.ai/ninigutierrez/5fba6d32-f669-4503-9d23-32e81a72e06b" class="btn btn-secondary">Unirme a la Membresía</a>
   </div>
 </header>
 
