--- a/index.html
+++ b/index.html
@@ -18,8 +18,34 @@
       color:#fff; text-align:center; padding:90px 20px 120px;
     }
 
-    .logo-wrapper{ display:flex; justify-content:center; margin-bottom:30px; }
-    .logo-wrapper img{ max-width:240px; width:100%; height:auto; }
+    /* LOGO: más grande + contraste garantizado */
+    .logo-wrapper{
+      display:flex;
+      justify-content:center;
+      margin-bottom: 22px;
+    }
+
+    /* Contenedor tipo "badge" para dar contraste con fondo */
+    .logo-badge{
+      background: rgba(255,255,255,.92);
+      border: 1px solid rgba(255,255,255,.55);
+      padding: 12px 18px;
+      border-radius: 18px;
+      box-shadow: 0 16px 30px rgba(0,0,0,.18);
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo-wrapper img{
+      width: min(520px, 88vw);  /* más grande y responsive */
+      height: auto;
+      max-height: 140px;        /* controla el alto */
+      object-fit: contain;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,.12)); /* mejora legibilidad */
+    }
 
     header h1{ font-size:2.6rem; font-weight:700; max-width:900px; margin:auto; }
     header p{ margin-top:20px; font-size:1.15rem; max-width:760px; margin:auto; }
@@ -42,7 +68,6 @@
     .btn-secondary:hover{ background: rgba(255,255,255,.22); }
 
     .container{ max-width:1100px; margin:auto; padding:80px 20px; }
-
     .center-text{ text-align:center; max-width:820px; margin:auto; }
     .center-text h2{ font-size:2rem; margin-bottom:14px; }
 
@@ -55,6 +80,8 @@
       background:#fafafa; border-radius:20px; overflow:hidden;
       box-shadow:0 10px 25px rgba(0,0,0,0.06);
     }
+
+    /* Espacio para imagen por clase (puedes usar placeholder o img) */
     .class-image{
       width:100%; height:210px; background:#e5e7eb;
       display:flex; align-items:center; justify-content:center;
@@ -63,6 +90,7 @@
     .class-image img{
       width:100%; height:100%; object-fit:cover; display:block;
     }
+
     .class-content{ padding:30px; }
     .class-date{ color:#e11d48; font-weight:600; margin-bottom:8px; }
     .class-content h3{ margin-bottom:10px; }
@@ -111,11 +139,7 @@
     .membership-cta .btn-outline:hover{ background: rgba(255,255,255,.08); }
 
     /* FORMULARIO */
-    .form-wrap{
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 0 10px;
-    }
+    .form-wrap{ max-width: 700px; margin: 0 auto; padding: 0 10px; }
     .form-section{
       background:#fdf2f8; padding:80px 20px; border-radius:30px;
       max-width: 620px; margin: 55px auto 0;
@@ -139,7 +163,13 @@
 
     @media (max-width: 768px){
       header h1{ font-size:2rem; }
-      .logo-wrapper img{ max-width:180px; }
+
+      .logo-wrapper img{
+        width: min(420px, 90vw);
+        max-height: 120px;
+      }
+      .logo-badge{ padding: 10px 14px; border-radius: 16px; }
+
       .membership-cta h2{ font-size:1.6rem; }
     }
   </style>
@@ -149,8 +179,11 @@
 
 <header>
   <div class="logo-wrapper">
-    <!-- LOGO MEMBRESÍA (reemplazar archivo) -->
-   <img src="assets/img/logo-latinas-biz-mindset.png" alt="Latinas Biz MindSet">
+    <div class="logo-badge">
+      <!-- LOGO: ruta recomendada para GitHub Pages en repo -->
+      <!-- Si tu site es https://USUARIO.github.io/mind-set/ entonces usa: -->
+      <img src="assets/img/logo-latinas-biz-mindset.png" alt="Latinas Biz MindSet Membresía">
+    </div>
   </div>
 
   <h1>Clases gratuitas para fortalecer tu mentalidad y tu negocio</h1>
@@ -162,7 +195,7 @@
   <div class="hero-actions">
     <a href="#registro" class="btn btn-primary">Reservar mi lugar gratis</a>
     <!-- URL COMPRA MEMBRESÍA (reemplazar) -->
-    <a href="https://shop.beacons.ai/ninigutierrez/5fba6d32-f669-4503-9d23-32e81a72e06b" class="btn btn-secondary">Unirme a la Membresía</a>
+    <a href="https://TU-URL-DE-COMPRA-AQUI.com" class="btn btn-secondary">Unirme a la Membresía</a>
   </div>
 </header>
 
@@ -183,7 +216,7 @@
     <div class="class-card">
       <div class="class-image">
         <!-- ESPACIO PARA IMAGEN 1 -->
-        <!-- Reemplaza por: <img src="ruta/imagen-clase-1.jpg" alt="Clase 4 de febrero"> -->
+        <!-- Reemplaza por: <img src="assets/img/clase-4-feb.jpg" alt="Clase 4 de febrero"> -->
         Espacio para imagen (Clase 4 Feb)
       </div>
       <div class="class-content">
@@ -201,7 +234,7 @@
     <div class="class-card">
       <div class="class-image">
         <!-- ESPACIO PARA IMAGEN 2 -->
-        <!-- Reemplaza por: <img src="ruta/imagen-clase-2.jpg" alt="Clase 7 de febrero"> -->
+        <!-- Reemplaza por: <img src="assets/img/clase-7-feb.jpg" alt="Clase 7 de febrero"> -->
         Espacio para imagen (Clase 7 Feb)
       </div>
       <div class="class-content">
@@ -279,3 +312,4 @@
 
 </body>
 </html>
+
