--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       height: auto;
       max-height: 150px;
       object-fit: contain;
-      filter: none; /* sin sombra/contraste */
+      filter: none;
     }
 
     header h1{ font-size:2.6rem; font-weight:700; max-width:900px; margin:auto; }
@@ -52,7 +52,9 @@
     }
     .btn-secondary:hover{ background: rgba(255,255,255,.22); }
 
-    .container{ max-width:1100px; margin:auto; padding:80px 20px; }
+    /* Menos espacio entre secciones */
+    .container{ max-width:1100px; margin:auto; padding:60px 20px; }
+
     .center-text{ text-align:center; max-width:820px; margin:auto; }
     .center-text h2{ font-size:2rem; margin-bottom:14px; }
 
@@ -65,8 +67,6 @@
       background:#fafafa; border-radius:20px; overflow:hidden;
       box-shadow:0 10px 25px rgba(0,0,0,0.06);
     }
-
-    /* Espacio para imagen por clase */
     .class-image{
       width:100%; height:210px; background:#e5e7eb;
       display:flex; align-items:center; justify-content:center;
@@ -75,7 +75,6 @@
     .class-image img{
       width:100%; height:100%; object-fit:cover; display:block;
     }
-
     .class-content{ padding:30px; }
     .class-date{ color:#e11d48; font-weight:600; margin-bottom:8px; }
     .class-content h3{ margin-bottom:10px; }
@@ -98,6 +97,7 @@
     /* CTA MEMBRESÍA */
     .membership-cta{
       margin-top: 60px;
+      margin-bottom: 18px; /* reduce hueco antes del formulario */
       background: #111827;
       color:#fff;
       border-radius: 26px;
@@ -125,16 +125,31 @@
 
     /* FORMULARIO */
     .form-wrap{ max-width: 700px; margin: 0 auto; padding: 0 10px; }
+    #registro.container{ padding-top: 25px; } /* menos espacio arriba */
+
     .form-section{
-      background:#fdf2f8; padding:80px 20px; border-radius:30px;
-      max-width: 620px; margin: 55px auto 0;
+      background:#fdf2f8;
+      padding:80px 20px;
+      border-radius:30px;
+      max-width: 620px;
+      margin: 18px auto 0; /* antes 55px */
     }
+
     form{ display:flex; flex-direction:column; gap:18px; margin-top:28px; }
     label{ font-size:.9rem; font-weight:500; text-align:left; }
+
     input{
       margin-top:6px; padding:14px 16px; border-radius:12px;
       border:1px solid #d1d5db; font-size:1rem; width:100%;
     }
+
+    .helper{
+      font-size: .78rem;
+      color:#6b7280;
+      margin-top: 6px;
+      line-height: 1.3;
+    }
+
     button{
       margin-top:10px; padding:16px; border-radius:40px; border:none;
       background:#e11d48; color:#fff; font-size:1rem; font-weight:600;
@@ -148,12 +163,7 @@
 
     @media (max-width: 768px){
       header h1{ font-size:2rem; }
-
-      .logo-wrapper img{
-        width: min(420px, 90vw);
-        max-height: 130px;
-      }
-
+      .logo-wrapper img{ width: min(420px, 90vw); max-height: 130px; }
       .membership-cta h2{ font-size:1.6rem; }
     }
   </style>
@@ -174,7 +184,7 @@
 
   <div class="hero-actions">
     <a href="#registro" class="btn btn-primary">Reservar mi lugar gratis</a>
-    <!-- URL COMPRA MEMBRESÍA (reemplazar) -->
+    <!-- REEMPLAZA ESTA URL POR LA DE COMPRA -->
     <a href="https://TU-URL-DE-COMPRA-AQUI.com" class="btn btn-secondary">Unirme a la Membresía</a>
   </div>
 </header>
@@ -195,8 +205,8 @@
     <!-- CLASE 1 -->
     <div class="class-card">
       <div class="class-image">
-        <!-- ESPACIO PARA IMAGEN 1 -->
-        <!-- Reemplaza por: <img src="assets/img/clase-4-feb.jpg" alt="Clase 4 de febrero"> -->
+        <!-- Reemplaza por:
+        <img src="assets/img/clase-4-feb.jpg" alt="Clase 4 de febrero"> -->
         Espacio para imagen (Clase 4 Feb)
       </div>
       <div class="class-content">
@@ -213,8 +223,8 @@
     <!-- CLASE 2 -->
     <div class="class-card">
       <div class="class-image">
-        <!-- ESPACIO PARA IMAGEN 2 -->
-        <!-- Reemplaza por: <img src="assets/img/clase-7-feb.jpg" alt="Clase 7 de febrero"> -->
+        <!-- Reemplaza por:
+        <img src="assets/img/clase-7-feb.jpg" alt="Clase 7 de febrero"> -->
         Espacio para imagen (Clase 7 Feb)
       </div>
       <div class="class-content">
@@ -239,7 +249,7 @@
     </p>
 
     <div class="cta-row">
-      <!-- URL COMPRA MEMBRESÍA (reemplazar) -->
+      <!-- REEMPLAZA ESTA URL POR LA DE COMPRA -->
       <a class="btn btn-buy" href="https://TU-URL-DE-COMPRA-AQUI.com">Comprar membresía</a>
       <a class="btn btn-outline" href="#registro">Solo quiero la clase en vivo</a>
     </div>
@@ -255,7 +265,10 @@
         <p>Regístrate y recibe el acceso a la clase (en vivo) por email y WhatsApp.</p>
       </div>
 
-      <form action="https://formspree.io/f/mykjyzjw" method="POST">
+      <form action="https://formspree.io/f/mykjyzjw" method="POST" id="leadForm">
+        <!-- Opcional: redirección al enviar (si ya tienes una página gracias) -->
+        <!-- <input type="hidden" name="_next" value="https://TU-SITIO.com/gracias.html"> -->
+
         <label>
           Nombre completo
           <input type="text" name="name" placeholder="Tu nombre" required>
@@ -267,8 +280,24 @@
         </label>
 
         <label>
-          WhatsApp (con código país)
-          <input type="tel" name="whatsapp" placeholder="+1 555 123 4567" pattern="^\+?[0-9\s]{7,15}$" required>
+          WhatsApp (código país + número)
+          <!-- Validación E.164:
+               - Debe iniciar con +
+               - 10 a 15 dígitos en total (sin espacios, sin guiones)
+               Ej: +14155552671 / +573001234567
+          -->
+          <input
+            type="tel"
+            name="whatsapp"
+            placeholder="+14155552671"
+            inputmode="tel"
+            autocomplete="tel"
+            required
+            pattern="^\+[1-9]\d{9,14}$"
+            title="Ingresa tu WhatsApp en formato internacional. Ej: +14155552671 (sin espacios ni guiones).">
+          <div class="helper">
+            Formato requerido: <strong>+CódigoPaís + número</strong> (sin espacios). Ej: <strong>+14155552671</strong> o <strong>+573001234567</strong>.
+          </div>
         </label>
 
         <input type="hidden" name="source" value="Landing Clases Gratuitas Latinas Biz MindSet">
@@ -287,6 +316,28 @@
 <footer>
   © 2026 Latinas Biz MindSet · Todos los derechos reservados
 </footer>
+
+<script>
+  // Validación adicional (opcional) para forzar E.164 y mostrar error claro
+  // Mantiene el formulario simple y evita envíos con espacios/guiones.
+  (function () {
+    const form = document.getElementById('leadForm');
+    if (!form) return;
+
+    const phone = form.querySelector('input[name="whatsapp"]');
+    const re = /^\+[1-9]\d{9,14}$/;
+
+    form.addEventListener('submit', function (e) {
+      const v = (phone.value || '').trim();
+
+      if (!re.test(v)) {
+        e.preventDefault();
+        phone.focus();
+        alert('WhatsApp inválido. Usa formato internacional E.164: +14155552671 (sin espacios ni guiones).');
+      }
+    });
+  })();
+</script>
 
 </body>
 </html>
