--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -125,9 +124,17 @@
 
     form{ display:flex; flex-direction:column; gap:18px; margin-top:28px; }
     label{ font-size:.9rem; font-weight:500; text-align:left; }
-    input{
+    input, select{
       margin-top:6px; padding:14px 16px; border-radius:12px;
       border:1px solid #d1d5db; font-size:1rem; width:100%;
+      background:#fff;
+    }
+
+    .phone-row{
+      display:grid;
+      grid-template-columns: 170px 1fr;
+      gap:12px;
+      margin-top:6px;
     }
 
     .helper{
@@ -135,6 +142,17 @@
       color:#6b7280;
       margin-top: 6px;
       line-height: 1.3;
+    }
+
+    .error{
+      display:none;
+      margin-top:8px;
+      background:#fff1f2;
+      border:1px solid #fecdd3;
+      color:#9f1239;
+      padding:10px 12px;
+      border-radius:12px;
+      font-size:.85rem;
     }
 
     button{
@@ -153,6 +171,7 @@
       header h1{ font-size:2rem; }
       .logo-wrapper img{ width: min(420px, 90vw); max-height: 130px; }
       .membership-cta h2{ font-size:1.6rem; }
+      .phone-row{ grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -247,7 +266,7 @@
       </div>
 
       <!-- FORM: Envío AJAX -> reset -> redirect a thanks.html -->
-      <form action="https://formspree.io/f/mykjyzjw" method="POST" id="leadForm">
+      <form action="https://formspree.io/f/mykjyzjw" method="POST" id="leadForm" novalidate>
 
         <label>
           Nombre completo
@@ -256,28 +275,62 @@
 
         <label>
           Correo electrónico
-          <input type="email" name="email" placeholder="tucorreo@email.com" required>
+          <!-- type="email" ya valida; además agregamos validación extra por JS -->
+          <input type="email" name="email" id="emailInput" placeholder="tucorreo@email.com" required>
         </label>
 
         <label>
-          WhatsApp (código país + número)
-          <!-- Formato E.164 (recomendado):
-               + y 10-15 dígitos totales, sin espacios, sin guiones
-               Ej: +14155552671 / +573001234567
-          -->
-          <input
-            type="tel"
-            name="whatsapp"
-            placeholder="+14155552671"
-            inputmode="tel"
-            autocomplete="tel"
-            required
-            pattern="^\+[1-9]\d{9,14}$"
-            title="Ingresa tu WhatsApp en formato internacional. Ej: +14155552671 (sin espacios ni guiones).">
+          WhatsApp
+          <div class="phone-row">
+            <!-- CÓDIGO PAÍS (precargado) -->
+            <select name="country_code" id="countryCode" required>
+              <option value="+1" selected>🇺🇸 / 🇨🇦 +1</option>
+              <option value="+52">🇲🇽 +52</option>
+              <option value="+57">🇨🇴 +57</option>
+              <option value="+34">🇪🇸 +34</option>
+              <option value="+54">🇦🇷 +54</option>
+              <option value="+56">🇨🇱 +56</option>
+              <option value="+51">🇵🇪 +51</option>
+              <option value="+58">🇻🇪 +58</option>
+              <option value="+593">🇪🇨 +593</option>
+              <option value="+591">🇧🇴 +591</option>
+              <option value="+595">🇵🇾 +595</option>
+              <option value="+598">🇺🇾 +598</option>
+              <option value="+507">🇵🇦 +507</option>
+              <option value="+506">🇨🇷 +506</option>
+              <option value="+502">🇬🇹 +502</option>
+              <option value="+503">🇸🇻 +503</option>
+              <option value="+504">🇭🇳 +504</option>
+              <option value="+505">🇳🇮 +505</option>
+              <option value="+509">🇭🇹 +509</option>
+              <option value="+1-809">🇩🇴 +1-809</option>
+              <option value="+1-829">🇩🇴 +1-829</option>
+              <option value="+1-849">🇩🇴 +1-849</option>
+              <option value="+44">🇬🇧 +44</option>
+            </select>
+
+            <!-- NÚMERO (solo dígitos) -->
+            <input
+              type="tel"
+              name="whatsapp_number"
+              id="whatsappNumber"
+              placeholder="Número sin espacios"
+              inputmode="numeric"
+              autocomplete="tel-national"
+              required
+              pattern="^[0-9]{6,14}$"
+              title="Ingresa solo números (sin espacios ni guiones).">
+          </div>
+
+          <!-- Campo final que enviaremos a Formspree como whatsapp E.164 -->
+          <input type="hidden" name="whatsapp" id="whatsappE164" value="">
+
           <div class="helper">
-            Formato requerido: <strong>+CódigoPaís + número</strong> (sin espacios). Ej: <strong>+14155552671</strong> o <strong>+573001234567</strong>.
+            Selecciona tu <strong>código de país</strong> y escribe tu número <strong>solo con dígitos</strong>.
           </div>
         </label>
+
+        <div class="error" id="formError"></div>
 
         <input type="hidden" name="source" value="Landing Clases Gratuitas Latinas Biz MindSet">
 
@@ -300,27 +353,80 @@
   (function () {
     const form = document.getElementById('leadForm');
     const submitBtn = document.getElementById('submitBtn');
+    const errorBox = document.getElementById('formError');
+
+    const emailInput = document.getElementById('emailInput');
+    const countryCode = document.getElementById('countryCode');
+    const whatsappNumber = document.getElementById('whatsappNumber');
+    const whatsappE164 = document.getElementById('whatsappE164');
+
     if (!form) return;
 
-    // URL de gracias (mismo directorio del index.html)
+    // Redirección
     const THANKS_URL = 'thanks.html';
 
-    // Validación E.164
-    const phoneInput = form.querySelector('input[name="whatsapp"]');
-    const phoneRegex = /^\+[1-9]\d{9,14}$/;
+    // Email (validación más estricta que la del navegador; sin ser excesiva)
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/i;
+
+    // Número (solo dígitos), 6-14 dígitos. E.164 total 7-15; el código país se suma.
+    const numberRegex = /^[0-9]{6,14}$/;
+
+    function showError(msg) {
+      errorBox.textContent = msg;
+      errorBox.style.display = 'block';
+    }
+
+    function clearError() {
+      errorBox.textContent = '';
+      errorBox.style.display = 'none';
+    }
+
+    // Construye whatsapp E.164 final
+    function buildE164() {
+      // Limpia código país a solo + y dígitos (maneja +1-809 etc)
+      const cc = (countryCode.value || '').replace(/[^+\d]/g, '');
+      const num = (whatsappNumber.value || '').replace(/\D/g, '');
+      const full = `${cc}${num}`;
+      whatsappE164.value = full;
+      return full;
+    }
+
+    // Validación en vivo (opcional)
+    whatsappNumber.addEventListener('input', function () {
+      this.value = this.value.replace(/\D/g, '');
+      buildE164();
+    });
+    countryCode.addEventListener('change', buildE164);
 
     form.addEventListener('submit', async function (e) {
       e.preventDefault();
+      clearError();
 
-      // Validación WhatsApp
-      const phoneVal = (phoneInput.value || '').trim();
-      if (!phoneRegex.test(phoneVal)) {
-        phoneInput.focus();
-        alert('WhatsApp inválido. Usa formato internacional E.164: +14155552671 (sin espacios ni guiones).');
+      const emailVal = (emailInput.value || '').trim();
+      if (!emailRegex.test(emailVal)) {
+        emailInput.focus();
+        showError('Email inválido. Verifica el formato (ej: nombre@dominio.com).');
         return;
       }
 
-      // Deshabilitar botón para evitar doble envío
+      const numVal = (whatsappNumber.value || '').trim();
+      if (!numberRegex.test(numVal)) {
+        whatsappNumber.focus();
+        showError('WhatsApp inválido. Ingresa solo números (sin espacios ni guiones).');
+        return;
+      }
+
+      const finalE164 = buildE164();
+
+      // Validación final E.164 (7-15 dígitos después del +, total incluyendo país)
+      // finalE164 debe iniciar con + y luego 7-15 dígitos (sin guiones)
+      const e164Regex = /^\+[1-9]\d{6,14}$/;
+      if (!e164Regex.test(finalE164)) {
+        whatsappNumber.focus();
+        showError('WhatsApp inválido. Revisa código país y número.');
+        return;
+      }
+
       submitBtn.disabled = true;
       const originalText = submitBtn.textContent;
       submitBtn.textContent = 'Enviando...';
@@ -334,19 +440,18 @@
           headers: { 'Accept': 'application/json' }
         });
 
-        if (!res.ok) {
-          // Formspree suele devolver JSON con error; mantenemos mensaje simple
-          throw new Error('No se pudo enviar el formulario.');
-        }
+        if (!res.ok) throw new Error('No se pudo enviar el formulario.');
 
-        // 1) Limpiar formulario
+        // Limpiar formulario
         form.reset();
+        whatsappE164.value = '';
+        clearError();
 
-        // 2) Redireccionar a thanks
+        // Redirigir
         window.location.href = THANKS_URL;
 
       } catch (err) {
-        alert('Hubo un problema enviando tus datos. Intenta nuevamente.');
+        showError('Hubo un problema enviando tus datos. Intenta nuevamente.');
         submitBtn.disabled = false;
         submitBtn.textContent = originalText;
       }
