--- a/index.html
+++ b/index.html
@@ -295,9 +295,8 @@
 
   <div class="hero-actions">
     <a href="#registro" class="btn btn-primary">Reservar clase gratis</a>
-    <a href="#membresia" class="btn btn-ghost">Conocer la membresía</a>
-    <!-- REEMPLAZA ESTA URL POR LA DE COMPRA -->
-    <a href="https://TU-URL-DE-COMPRA-AQUI.com" class="btn btn-secondary">Unirme a la Membresía</a>
+      <!-- REEMPLAZA ESTA URL POR LA DE COMPRA -->
+    <a href="https://shop.beacons.ai/ninigutierrez/5fba6d32-f669-4503-9d23-32e81a72e06b" class="btn btn-secondary">Unirme a la Membresía</a>
   </div>
 </header>
 
@@ -389,7 +388,7 @@
 
         <div class="pricing-actions">
           <!-- REEMPLAZA ESTA URL POR LA DE COMPRA -->
-          <a class="btn btn-buy" href="https://TU-URL-DE-COMPRA-AQUI.com">Comprar membresía</a>
+          <a class="btn btn-buy" href="https://shop.beacons.ai/ninigutierrez/5fba6d32-f669-4503-9d23-32e81a72e06b">Comprar membresía</a>
           <a class="btn btn-outline-dark" href="#registro">Solo quiero la clase en vivo</a>
         </div>
       </div>
@@ -397,7 +396,7 @@
       <div class="agenda">
         <h3>📅 Agenda 2026</h3>
         <ul>
-          <li><strong>Primer Master Class Zoom:</strong> 7 de enero · 7:00 PM (hora New York) · Mentor sorpresa.</li>
+          <li><strong>Primer Master Class Zoom:</strong> 7 de enero · 7:00 PM (hora New York).</li>
           <li><strong>Reuniones mensuales:</strong> los <strong>primeros miércoles</strong> de cada mes · 7:00 PM (hora New York).</li>
           <li>✔️ Añade estas fechas a tu calendario y no te pierdas ninguna sesión.</li>
         </ul>
