--- a/thanks.html
+++ b/thanks.html
@@ -1,32 +1,58 @@
-<!-- thanks.html (crea este archivo en la raíz del repo, junto a index.html) -->
+<!-- thanks.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gracias | Latinas Biz MindSet</title>
+
+  <!-- Fuentes + performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Preload logo -->
+  <link rel="preload" as="image" href="assets/img/logo-latinas-biz-mindset.webp?v=1" type="image/webp" fetchpriority="high">
+
   <style>
     *{ box-sizing:border-box; margin:0; padding:0; font-family:'Poppins', sans-serif; }
     body{ background:#ffffff; color:#111827; }
+
     .wrap{
       min-height:100vh;
       display:flex;
+      flex-direction:column;
       align-items:center;
       justify-content:center;
-      padding:40px 18px;
+      padding:42px 18px 26px;
     }
+
     .card{
-      max-width:720px;
+      max-width:760px;
       width:100%;
-      border-radius:22px;
-      padding:46px 22px;
+      border-radius:24px;
+      padding:44px 22px;
       text-align:center;
       background:#fdf2f8;
       box-shadow:0 16px 40px rgba(0,0,0,.10);
+      border:1px solid #fbcfe8;
     }
+
+    .logo{
+      display:flex;
+      justify-content:center;
+      margin-bottom:18px;
+    }
+    .logo img{
+      width:min(520px, 92vw);
+      height:auto;
+      max-height:170px;
+      object-fit:contain;
+    }
+
     h1{ font-size:2rem; margin-bottom:10px; }
-    p{ color:#374151; max-width:560px; margin: 0 auto; }
+    p{ color:#374151; max-width:620px; margin:0 auto; }
+
     .btn{
       display:inline-block;
       margin-top:22px;
@@ -35,24 +61,53 @@
       background:#e11d48;
       color:#fff;
       text-decoration:none;
-      font-weight:600;
+      font-weight:700;
+      transition:.2s;
     }
     .btn:hover{ background:#be123c; }
-    .small{ font-size:.9rem; margin-top:14px; color:#6b7280; }
+
+    .small{ font-size:.92rem; margin-top:14px; color:#6b7280; }
+
+    footer{
+      margin-top:22px;
+      text-align:center;
+      font-size:.85rem;
+      color:#6b7280;
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
     <div class="card">
+
+      <div class="logo">
+        <picture>
+          <source srcset="assets/img/logo-latinas-biz-mindset.webp?v=1" type="image/webp">
+          <img
+            src="assets/img/logo-latinas-biz-mindset.png?v=1"
+            alt="Latinas Biz MindSet"
+            width="2048"
+            height="1024"
+            fetchpriority="high"
+            loading="eager"
+            decoding="async">
+        </picture>
+      </div>
+
       <h1>Registro confirmado ✅</h1>
       <p>
         Gracias por registrarte. En breve recibirás la información de acceso a la clase por email y WhatsApp.
       </p>
+
       <a class="btn" href="index.html">Volver a la página</a>
+
       <div class="small">
         Nota: la grabación y recursos son exclusivos para miembros.
       </div>
     </div>
+
+    <footer>© 2026 Latinas Biz MindSet · Todos los derechos reservados</footer>
   </div>
 </body>
 </html>
