--- a/thanks.html
+++ b/thanks.html
@@ -11,8 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Preload logo -->
-  <link rel="preload" as="image" href="assets/img/logo-latinas-biz-mindset.webp?v=1" type="image/webp" fetchpriority="high">
+  <!-- PRELOAD del logo (usa el archivo que vas a subir) -->
+  <link rel="preload" as="image" href="assets/img/logo-thanks.png?v=1" fetchpriority="high">
 
   <style>
     *{ box-sizing:border-box; margin:0; padding:0; font-family:'Poppins', sans-serif; }
@@ -44,7 +44,7 @@
       margin-bottom:18px;
     }
     .logo img{
-      width:min(520px, 92vw);
+      width:min(560px, 92vw);
       height:auto;
       max-height:170px;
       object-fit:contain;
@@ -81,18 +81,17 @@
   <div class="wrap">
     <div class="card">
 
+      <!-- LOGO (nuevo) -->
+      <!-- Sube tu imagen como: assets/img/logo-thanks.png -->
       <div class="logo">
-        <picture>
-          <source srcset="assets/img/logo-latinas-biz-mindset.webp?v=1" type="image/webp">
-          <img
-            src="assets/img/logo-latinas-biz-mindset.png?v=1"
-            alt="Latinas Biz MindSet"
-            width="2048"
-            height="1024"
-            fetchpriority="high"
-            loading="eager"
-            decoding="async">
-        </picture>
+        <img
+          src="assets/img/logo-thanks.png?v=1"
+          alt="Latinas Biz MindSet"
+          width="2048"
+          height="1024"
+          fetchpriority="high"
+          loading="eager"
+          decoding="async">
       </div>
 
       <h1>Registro confirmado ✅</h1>
