--- a/thanks.html
+++ b/thanks.html
@@ -72,3 +72,40 @@
       margin-top:22px;
       text-align:center;
       font-size:.85rem;
+      color:#6b7280;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <div class="card">
+
+      <!-- LOGO WebP -->
+      <div class="logo">
+        <img
+          src="assets/img/logo-thanks.webp?v=1"
+          alt="Latinas Biz MindSet"
+          width="2048"
+          height="1024"
+          fetchpriority="high"
+          loading="eager"
+          decoding="async">
+      </div>
+
+      <h1>Registro confirmado ✅</h1>
+      <p>
+        Gracias por registrarte. En breve recibirás la información de acceso a la clase por email y WhatsApp.
+      </p>
+
+      <a class="btn" href="index.html">Volver a la página</a>
+
+      <div class="small">
+        Nota: la grabación y recursos son exclusivos para miembros.
+      </div>
+    </div>
+
+    <footer>© 2026 Latinas Biz MindSet · Todos los derechos reservados</footer>
+  </div>
+</body>
+</html>
