--- a/thanks.html
+++ b/thanks.html
@@ -64,7 +64,7 @@
       font-weight:700;
       transition:.2s;
     }
-    .btn:hover{ background:#be123c; }
+    .btn:hover{ background:#5d1a5d; }
 
     .small{ font-size:.92rem; margin-top:14px; color:#6b7280; }
 
