--- a/thanks.html
+++ b/thanks.html
@@ -58,7 +58,7 @@
       margin-top:22px;
       padding:14px 26px;
       border-radius:40px;
-      background:#e11d48;
+      background:#5d1a5d;
       color:#fff;
       text-decoration:none;
       font-weight:700;
