--- a/thanks.html
+++ b/thanks.html
@@ -58,13 +58,13 @@
       margin-top:22px;
       padding:14px 26px;
       border-radius:40px;
-      background:#5d1a5d;
+      background:#d51a5d;
       color:#fff;
       text-decoration:none;
       font-weight:700;
       transition:.2s;
     }
-    .btn:hover{ background:#5d1a5d; }
+    .btn:hover{ background:#d51a5d; }
 
     .small{ font-size:.92rem; margin-top:14px; color:#6b7280; }
 
