--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       background:#e11d48; color:#fff;
       padding:14px 22px;
     }
-    .btn-buy:hover{ background:#be123c; }
+    .btn-buy:hover{ background:#d51a5d; }
     .btn-outline-dark{
       background: transparent; color:#fff;
       border:1px solid rgba(255,255,255,.35);
