--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       display:flex; gap:10px; flex-wrap:wrap;
     }
     .btn-buy{
-      background:#e11d48; color:#fff;
+      background:#d51a5d; color:#fff;
       padding:14px 22px;
     }
     .btn-buy:hover{ background:#d51a5d; }
@@ -247,7 +247,7 @@
 
     button{
       margin-top:8px; padding:16px; border-radius:40px; border:none;
-      background:#e11d48; color:#fff; font-size:1rem; font-weight:700;
+      background:#d51a5d; color:#fff; font-size:1rem; font-weight:700;
       cursor:pointer; transition:.25s;
     }
     button:hover{ background:#be123c; }
