--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       background:#d51a5d; color:#fff; font-size:1rem; font-weight:700;
       cursor:pointer; transition:.25s;
     }
-    button:hover{ background:#be123c; }
+    button:hover{ background:#d51a5d; }
     button:disabled{ opacity:.65; cursor:not-allowed; }
 
     .legal{ font-size:.75rem; color:#6b7280; margin-top:10px; text-align:center; }
