--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 <!-- PRÓXIMAS CLASES GRATUITAS (MANTENER) -->
 <section class="container" style="padding-top: 18px;">
   <div class="center-text">
-    <span class="tag" style="background:#e11d48">Clases gratuitas</span>
+    <span class="tag" style="background:#D51A5D">Clases Gratuitas</span>
     <h2>Próximas clases en vivo</h2>
     <p class="muted">Todas las clases se realizan vía Zoom a las <strong>7:00 PM (hora New York)</strong>.</p>
   </div>
