--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
       margin-bottom:10px;
     }
 
+   .tag-big{
+    font-size: 1rem;      /* antes .78rem */
+    padding: 10px 16px;   /* antes 6px 10px */
+  }
+
     /* Features */
     .grid-3{
       display:grid;
@@ -408,7 +413,7 @@
 <!-- PRÓXIMAS CLASES GRATUITAS (MANTENER) -->
 <section class="container" style="padding-top: 18px;">
   <div class="center-text">
-    <span class="tag" style="background:#D51A5D">Clases Gratuitas</span>
+    <span class="tag tag-big" style="background:#D51A5D">Clases Gratuitas</span>
     <h2>Próximas clases en vivo</h2>
     <p class="muted">Todas las clases se realizan vía Zoom a las <strong>7:00 PM (hora New York)</strong>.</p>
   </div>
