--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
     <div class="class-card">
       <div class="class-image">
-        <!-- Reemplaza por: <img src="assets/img/clase-7-feb.jpg" alt="Clase 7 de febrero"> -->
+        <img src="assets/img/clase-4-feb.webp?v=1" alt="Clase 4 de febrero">
         Espacio para imagen (Clase 7 Feb)
       </div>
       <div class="class-content">
